// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tree-of-dependencies-settings Renders \`tree-of-dependencies-settings\` with custom props 1`] = `
<widget-settings-item-stub
  title="Tree of dependencies settings"
>
  <div
    class="layout"
  >
    <div
      class="v-input mt-0 v-input--hide-details theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
          style="height: auto;"
        >
          <div
            class="v-input--radio-group__input"
            role="radiogroup"
          >
            <div
              class="v-radio theme--light v-item--active"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light primary--text"
                >
                  radio_button_checked
                </i>
                <input
                  aria-checked="true"
                  name="opened"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <div
                  class="v-input--selection-controls__ripple primary--text"
                />
              </div>
              <label
                class="v-label theme--light"
                style="left: 0px; position: relative;"
              >
                Show all dependencies
              </label>
            </div>
            <div
              class="v-radio theme--light"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  radio_button_unchecked
                </i>
                <input
                  aria-checked="false"
                  name="opened"
                  role="radio"
                  type="radio"
                  value="1"
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
              <label
                class="v-label theme--light"
                style="left: 0px; position: relative;"
              >
                Show dependencies defining the state
              </label>
            </div>
            <div
              class="v-radio theme--light"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  radio_button_unchecked
                </i>
                <input
                  aria-checked="false"
                  name="opened"
                  role="radio"
                  type="radio"
                  value="2"
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
              <label
                class="v-label theme--light"
                style="left: 0px; position: relative;"
              >
                Show selector
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`tree-of-dependencies-settings Renders \`tree-of-dependencies-settings\` with default props 1`] = `
<widget-settings-item-stub
  title="Tree of dependencies settings"
>
  <div
    class="layout"
  >
    <div
      class="v-input mt-0 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
          style="height: auto;"
        >
          <div
            class="v-input--radio-group__input"
            role="radiogroup"
          >
            <div
              class="v-radio theme--light"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  radio_button_unchecked
                </i>
                <input
                  aria-checked="false"
                  name="opened"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
              <label
                class="v-label theme--light"
                style="left: 0px; position: relative;"
              >
                Show all dependencies
              </label>
            </div>
            <div
              class="v-radio theme--light"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  radio_button_unchecked
                </i>
                <input
                  aria-checked="false"
                  name="opened"
                  role="radio"
                  type="radio"
                  value="1"
                />
                <div
                  class="v-input--selection-controls__ripple"
                />
              </div>
              <label
                class="v-label theme--light"
                style="left: 0px; position: relative;"
              >
                Show dependencies defining the state
              </label>
            </div>
            <div
              class="v-radio theme--light v-item--active"
            >
              <div
                class="v-input--selection-controls__input"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light primary--text"
                >
                  radio_button_checked
                </i>
                <input
                  aria-checked="true"
                  name="opened"
                  role="radio"
                  type="radio"
                  value="2"
                />
                <div
                  class="v-input--selection-controls__ripple primary--text"
                />
              </div>
              <label
                class="v-label theme--light"
                style="left: 0px; position: relative;"
              >
                Show selector
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;
